# mixsol

./: .gitignore  .readthedocs.yaml  CITATION.cff  README.md  Solution Mixing.ipynb  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
Example Notebooks/: Powder Weighing.ipynb  Solution Mixing.ipynb  Tabulating All Accessible Mixtures.ipynb  coverage.ipynb
docs/source/: conf.py  mixsol.rst  requirements.txt
mixsol/: __init__.py  components.py  digraph.py  helpers.py  mix.py  mixsol.py  solution.py
mixsol/opentrons/baseprotocols/: OT2listener_websocket_template_reusetips.py
source/: index.rst  modules.rst
tests/: conftest.py  test_components.py  test_helpers.py  test_mix.py
