[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mixsol"
version = "1.0.1"
description = "Planning tool for combinatorial solution mixing. Reach target solutions from mixes of starting solutions, constrained by minimum pipetting volumes. Also aids in computing amounts of powdered reagents required to form solutions with target solutes + molarities."
license = {text = "GPLv3"}
authors = [
  { name = "Rishi E Kumar", email = "rishi42@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "matplotlib",
  "molmass",
  "scipy>=1.2.3",
]
keywords = [
  "Chemistry",
  "Mixing",
  "Combinatoric",
  "Planning",
  "Dilution",
  "Molarity",
  "Solution"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/rekumar/mixsol"
Download = "https://github.com/rekumar/mixsol/archive/refs/tags/v0.6.tar.gz"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
  "mixsol/",
  "README.md"
]

[dependency-groups]
dev = [
    "ipykernel>=4.10.1",
    "pandas>=2.3.1",
    "pytest>=4.6.11",
    "pytest-cov>=2.12.1",
    "seaborn>=0.13.2",
]
